--- a/app/build.gradle
+++ b/app/build.gradle
@@ -166,4 +166,8 @@ dependencies {
     }
 
 
+
+    testImplementation"io.mockk:mockk-android:1.9.3"
+    androidTestImplementation"io.mockk:mockk-android:1.9.3"
+
 }
